[package]
name = "rescue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git" }
num = "0.4.1"
num-bigint = "0.4.4"
num-integer = "0.1.45"
sha3 = "0.10.8"
